 - gui: added a pure SFML implementation for the gui::manager
 - gui: fixed rare crash in editbox
 - gui: fixed crash when calling Lua delete_frame() twice on same frame
 - gui: fixed Lua get_width()/get_height() returning incorrect values
 - gui: fixed crash when currently hovered/focussed frame is deleted
 - gui: fixed virtual gui::scroll_frame not able to be inherited from
 - gui: added error message when trying to anchor to an object managed by another renderer
 - gui: added error message when trying to anchor to a "$parent..." when there is no parent
 - gui: renamed gui::manager_impl into gui::renderer_impl
 - gui: renamed gui::gl::manager into gui::gl::renderer
 - gui: sprite is now a value type
 - gui: the GUI will now properly handle render window being resized
 - gui: added support for nested manually-rendered objects (scroll frame inside scroll frame)
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
 - gui: renderer is now always a frame rather than a uiobject
 - gui: only frames can now be flagged as manually rendered
 - gui: migrated most usage of std::(multi)map to sorted std::vector for performance
 - gui: "frame_level" has been renamed to just "level"
 - gui: frame::get_children and frame::get_regions return views rather than containers
 - gui: added uiobject::down_cast for safer down casting
 - xml: now parsing standard XML comments

v1.2.0:
 - added support for MSVC 2010
 - gui: added the quad2<T> type
 - gui::layer: added missing default constructor
 - gui::text, gui::font_string, gui::edit_box: cleaned some UTF8 to unicode conversions
 - gui::manager: fixed bug when parsing empty lines in toc files
 - xml::document: fixed bug with multiline comments
 - various fixes detected by MSVC

v1.1.6:
 - colors can now be given with the standard '#RRGGBB[AA]' format (both in C++ and XML/Lua)
 - gui::color: added hue/luminosity/saturation operations and istream >> operator

v1.1.5: